--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "mongoose": "^5.7.13",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "ngx-quill": "^7.3.11",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
