--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+server/config/keys.dev.js
 # compiled output
 /dist
 /tmp
@@ -9,6 +10,7 @@
 
 # dependencies
 /node_modules
+
 
 # profiling files
 chrome-profiler-events*.json
